# intergrax

./: .gitignore  DAILY_TODO.md  INTERGRAX_ENGINE_BUNDLE._py_  INTERGRAX_ENGINE_BUNDLE.py  LICENSE.txt  PROJECT_STRUCTURE.md  README-intro.md  README.md  bundle_intergrax_engine.py  generate_project_overview.py  install_requirements_instruction_uv.txt  main.py  pyproject.toml  requirements-from-conda.txt
api/chat/: README.md  main.py
api/chat/tools/: chroma_utils.py  db_utils.py  (+2 more)
applications/ChatStreamlit/: streamlit_app.py
applications/UXAuditAgent/: UXAuditTest.ipynb
applications/chat_streamlit/: README.md  api_utils.py  chat_interface.py  sidebar.py
applications/ux_audit_agent/: UXAuditTest.ipynb
bundles/: ENGINE_RUNTIME_BUNDLE._py  INTERGRAX_ENGINE_BUNDLE._py_  runtime._py
docs/: DROP_IN_KNOWLEDGE_MODE.md  ROADMAP.md  agent_factory.md  nexus.md
docs/key_components/: 01-web-research-agent.md  02-memory-and-profile-component.md  05-mcp-framework.md  06-business-profile-intelligence.md  08-voice-agent-speech-interaction.md
docs/roadmap/: 01-web-research-agent.md  02-large-file-rag.md  02-memory-and-profile-component.md  03-large-file-rag.md  04-fastapi-framework.md  04-mcp-framework.md  05-business-profile-intelligence.md  05-mcp-framework.md  06-business-profile-intelligence.md  06-multi-agent-supervisor-flow.md  07-multi-agent-supervisor-flow.md  08-voice-agent-speech-interaction.md
intergrax/: chat_agent.py  logging.py  system_prompts.py
intergrax/chains/: langchain_qa_chain.py
intergrax/fastapi_core/: app_factory.py  config.py  context.py
intergrax/globals/: settings.py
intergrax/llm/: conversational_memory.py  llm_adapters.py  llm_adapters_legacy.py  messages.py
intergrax/llm_adapters/: __init__.py  aws_bedrock_adapter.py  azure_openai_adapter.py  base.py  claude_adapter.py  gemini_adapter.py  llm_adapter.py  llm_provider.py  llm_provider_registry.py  llm_usage_track.py  mistral_adapter.py  ollama_adapter.py  openai_responses_adapter.py
intergrax/memory/: conversational_memory.py  conversational_store.py  long_term_memory.py  long_term_memory_manager.py  long_term_memory_store.py  organization_profile_manager.py  organization_profile_memory.py  organization_profile_store.py  user_profile_instructions_service.py  user_profile_manager.py  user_profile_memory.py  user_profile_store.py
intergrax/multimedia/: audio_loader.py  images_loader.py  ipynb_display.py  video_loader.py
intergrax/rag/: documents_loader.py  documents_splitter.py  dual_index_builder.py  dual_retriever.py  embedding_manager.py  rag_answerer.py  rag_prompts.py  rag_retriever.py  re_ranker.py  vectorstore_manager.py  windowed_answerer.py
intergrax/supervisor/: supervisor.py  supervisor_components.py  supervisor_prompts.py  supervisor_to_state_graph.py
intergrax/tools/: tools_agent.py  tools_base.py
intergrax/utils/: time_provider.py
notebooks/: rag_custom_test.ipynb  rag_multimodal_test.ipynb  rag_openai_test.ipynb  rag_video_audio_test.ipynb  supervisor_test.ipynb
notebooks/drop_in_knowledge_mode/: 01_basic_memory_demo.ipynb  02_attachments_ingestion_demo.ipynb  03_rag_context_builder_demo.ipynb  04_websearch_context_demo.ipynb  05_tools_context_demo.ipynb  06_session_memory_roundtrip_demo.ipynb  07_user_profile_instructions_baseline.ipynb  08_user_profile_instructions_generation.ipynb  09_long_term_memory_consolidation.ipynb  10_e2e_user_longterm_memory.ipynb  11_chatgpt_like_e2e.ipynb  12_engine_planner.ipynb  12_simple_planner.ipynb  12a_engine_planner.ipynb  12b_engine_planner.ipynb  13_engine_step_planner.ipynb  13a_engine_step_planner.ipynb  13b_engine_step_planner.ipynb  14_engine_planner_executor.ipynb  15_plan_loop_controller.ipynb  15_plan_loop_controller_static.ipynb  16_static_planner_pipeline.ipynb  17_plan_loop_controller_dynamic.ipynb  18_dynamic_planner_pipeline.ipynb  19_runtime_loops.ipynb
notebooks/langgraph/: hybrid_multi_source_rag_langgraph.ipynb  simple_llm_langgraph.ipynb  simple_web_research_langgraph.ipynb
notebooks/multimedia/: rag_multimodal_presentation.ipynb  rag_video_audio_presentation.ipynb
notebooks/nexus/: 01_basic_memory_demo.ipynb  02_attachments_ingestion_demo.ipynb  03_rag_context_builder_demo.ipynb  04_websearch_context_demo.ipynb  05_tools_context_demo.ipynb  06_session_memory_roundtrip_demo.ipynb  07_user_profile_instructions_baseline.ipynb  08_user_profile_instructions_generation.ipynb  09_long_term_memory_consolidation.ipynb  10_e2e_user_longterm_memory.ipynb  11_chatgpt_like_e2e.ipynb  12a_engine_planner.ipynb  12b_engine_planner.ipynb  13a_engine_step_planner.ipynb  13b_engine_step_planner.ipynb  14_engine_planner_executor.ipynb  15_plan_loop_controller_static.ipynb  16_static_planner_pipeline.ipynb  17_plan_loop_controller_dynamic.ipynb  18_dynamic_planner_pipeline.ipynb  19_runtime_loops.ipynb
notebooks/openai/: rag_openai_presentation.ipynb
notebooks/rag/: chat_agent_presentation.ipynb  output_structure_presentation.ipynb  rag_custom_presentation.ipynb  rag_multimodal_presentation.ipynb  tool_agent_presentation.ipynb
notebooks/supervisor/: supervisor_test.ipynb
notebooks/websearch/: websearch_presentation.ipynb  websearch_test.ipynb
prompts/chat_router/: 1.yaml
prompts/chat_router_tool/: 1.yaml
prompts/planner_base/: 1.yaml
prompts/planner_default/: 1.yaml
prompts/planner_next_step_rule/: 1.yaml
prompts/rag_answerer_user_instruction/: 1.yaml
prompts/rag_answerer_user_question/: 1.yaml
prompts/rag_context/: 1.yaml
prompts/tools_agent_context/: 1.yaml
prompts/user_longterm_memory/: 1.yaml
prompts/websearch_grounded_context/: 1.yaml
prompts/websearch_mapreduce_final_header/: 1.yaml
prompts/websearch_serp_context/: 1.yaml
scripts/: audit.bat  bundle.bat  cleanup.bat  project_overview.bat  setup.bat  test.bat
tests/: conftest.py
tests/_support/: assertions.py  builder.py
tests/network/: test_hybrid_multi_source_rag_langgraph.py
tools/: ast_audit.py  bundle_intergrax_engine.py  cleanup_caches.py  generate_project_overview.py
(+393 files in other folders)
